src/main/java/uk/co/jackoftrades/backend/io/parsers/antlr/uientry/UIEntryGramParser.java
// Generated from C:/Users/rowan/Documents/IntelliJProjects/Angband.4.2.6/src/main/java/uk/co/jackoftrades/backend/io/parsers/antlr/grammars/UIEntryGram.g4 by ANTLR 4.13.2
package uk.co.jackoftrades.backend.io.parsers.antlr.uientry;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;
import uk.co.jackoftrades.frontend.entries.UIEntry;
import uk.co.jackoftrades.frontend.entries.UIEntry.StatElemType;
import uk.co.jackoftrades.frontend.entries.UIEntryRenderer;
import uk.co.jackoftrades.frontend.entries.enums.EntryFlag;
import uk.co.jackoftrades.frontend.screen.enums.CombinerName;
import uk.co.jackoftrades.middle.enums.StatElementEnum;
import uk.co.jackoftrades.middle.enums.Stats;
import uk.co.jackoftrades.middle.game.Game;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class UIEntryGramParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            COMMENT = 1, EOL = 2, NAME = 3, PARAMETER = 4, RENDERER = 5, COMBINE = 6, CATEGORY = 7,
            DESC = 8, FLAGS = 9, LABEL = 10, LABEL5 = 11, LABEL2 = 12, TEMPLATE = 13, PRIORITY = 14,
            PARAMETERTYPE = 15, COMBINETYPE = 16, NUMBER = 17, MINUS = 18, TAG = 19, TEXT = 20;
    public static final int
            RULE_name = 0, RULE_parameter = 1, RULE_renderer = 2, RULE_combine = 3,
            RULE_priority = 4, RULE_category = 5, RULE_flags = 6, RULE_desc = 7, RULE_label = 8,
            RULE_label2 = 9, RULE_label5 = 10, RULE_template = 11, RULE_entry = 12,
            RULE_entries = 13;

    private static String[] makeRuleNames() {
        return new String[]{
                "name", "parameter", "renderer", "combine", "priority", "category", "flags",
                "desc", "label", "label2", "label5", "template", "entry", "entries"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, null, null, "'name:'", "'parameter:'", "'renderer:'", "'combine:'",
                "'category:'", "'desc:'", "'flags:'", "'label:'", "'label5:'", "'label2:'",
                "'template:'", "'priority:'", null, null, null, "'-'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "COMMENT", "EOL", "NAME", "PARAMETER", "RENDERER", "COMBINE", "CATEGORY",
                "DESC", "FLAGS", "LABEL", "LABEL5", "LABEL2", "TEMPLATE", "PRIORITY",
                "PARAMETERTYPE", "COMBINETYPE", "NUMBER", "MINUS", "TAG", "TEXT"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "UIEntryGram.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public UIEntryGramParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class NameContext extends ParserRuleContext {
        public String nameText;
        public StatElementEnum tag;
        public Token TEXT;
        public Token TAG;

        public TerminalNode NAME() {
            return getToken(UIEntryGramParser.NAME, 0);
        }

        public TerminalNode TEXT() {
            return getToken(UIEntryGramParser.TEXT, 0);
        }

        public TerminalNode TAG() {
            return getToken(UIEntryGramParser.TAG, 0);
        }

        public NameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).enterName(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).exitName(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UIEntryGramVisitor)
                return ((UIEntryGramVisitor<? extends T>) visitor).visitName(this);
            else return visitor.visitChildren(this);
        }
    }

    public final NameContext name() throws RecognitionException {
        NameContext _localctx = new NameContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_name);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(28);
                match(NAME);
                setState(29);
                ((NameContext) _localctx).TEXT = match(TEXT);
                setState(31);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == TAG) {
                    {
                        setState(30);
                        ((NameContext) _localctx).TAG = match(TAG);
                    }
                }


                ((NameContext) _localctx).nameText = ((NameContext) _localctx).TEXT.getText();
                if (((NameContext) _localctx).TAG != null) {
                    String t = ((NameContext) _localctx).TAG.getText();
                    t = t.substring(1, t.length() - 1);
                    // Assume it's a stat and try to get it from Stats
                    String test = "STAT_" + t;
                    try {
                        Stats.valueOf(test);
                        ((NameContext) _localctx).tag = StatElementEnum.valueOf("STAT_" + t);
                    } catch (IllegalArgumentException i) {
                        ((NameContext) _localctx).tag = StatElementEnum.valueOf("ELEM_" + t);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ParameterContext extends ParserRuleContext {
        public StatElemType parameterType;
        public Token PARAMETERTYPE;

        public TerminalNode PARAMETER() {
            return getToken(UIEntryGramParser.PARAMETER, 0);
        }

        public TerminalNode PARAMETERTYPE() {
            return getToken(UIEntryGramParser.PARAMETERTYPE, 0);
        }

        public ParameterContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parameter;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).enterParameter(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).exitParameter(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UIEntryGramVisitor)
                return ((UIEntryGramVisitor<? extends T>) visitor).visitParameter(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParameterContext parameter() throws RecognitionException {
        ParameterContext _localctx = new ParameterContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_parameter);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(35);
                match(PARAMETER);
                setState(36);
                ((ParameterContext) _localctx).PARAMETERTYPE = match(PARAMETERTYPE);

                String parm = ((ParameterContext) _localctx).PARAMETERTYPE.getText().toUpperCase();
                ((ParameterContext) _localctx).parameterType = StatElemType.valueOf(parm);

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RendererContext extends ParserRuleContext {
        public UIEntryRenderer rend;
        public Token TEXT;

        public TerminalNode RENDERER() {
            return getToken(UIEntryGramParser.RENDERER, 0);
        }

        public TerminalNode TEXT() {
            return getToken(UIEntryGramParser.TEXT, 0);
        }

        public RendererContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_renderer;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).enterRenderer(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).exitRenderer(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UIEntryGramVisitor)
                return ((UIEntryGramVisitor<? extends T>) visitor).visitRenderer(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RendererContext renderer() throws RecognitionException {
        RendererContext _localctx = new RendererContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_renderer);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(39);
                match(RENDERER);
                setState(40);
                ((RendererContext) _localctx).TEXT = match(TEXT);

                String rendName = ((RendererContext) _localctx).TEXT.getText();
                ((RendererContext) _localctx).rend = Game.getUIEntryRenderer(rendName);

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CombineContext extends ParserRuleContext {
        public CombinerName combineType;
        public Token COMBINETYPE;

        public TerminalNode COMBINE() {
            return getToken(UIEntryGramParser.COMBINE, 0);
        }

        public TerminalNode COMBINETYPE() {
            return getToken(UIEntryGramParser.COMBINETYPE, 0);
        }

        public CombineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_combine;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).enterCombine(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).exitCombine(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UIEntryGramVisitor)
                return ((UIEntryGramVisitor<? extends T>) visitor).visitCombine(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CombineContext combine() throws RecognitionException {
        CombineContext _localctx = new CombineContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_combine);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(43);
                match(COMBINE);
                setState(44);
                ((CombineContext) _localctx).COMBINETYPE = match(COMBINETYPE);

                String combiner = ((CombineContext) _localctx).COMBINETYPE.getText();
                ((CombineContext) _localctx).combineType = CombinerName.valueOf(combiner);

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PriorityContext extends ParserRuleContext {
        public String priorityString;
        public int priorityNum;
        public Token TEXT;
        public Token MINUS;
        public Token NUMBER;

        public TerminalNode PRIORITY() {
            return getToken(UIEntryGramParser.PRIORITY, 0);
        }

        public TerminalNode TEXT() {
            return getToken(UIEntryGramParser.TEXT, 0);
        }

        public TerminalNode NUMBER() {
            return getToken(UIEntryGramParser.NUMBER, 0);
        }

        public TerminalNode MINUS() {
            return getToken(UIEntryGramParser.MINUS, 0);
        }

        public PriorityContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_priority;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).enterPriority(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).exitPriority(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UIEntryGramVisitor)
                return ((UIEntryGramVisitor<? extends T>) visitor).visitPriority(this);
            else return visitor.visitChildren(this);
        }
    }

    public final PriorityContext priority() throws RecognitionException {
        PriorityContext _localctx = new PriorityContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_priority);

        ((PriorityContext) _localctx).priorityString = "";
        ((PriorityContext) _localctx).priorityNum = 0;

        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(47);
                match(PRIORITY);
                setState(55);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case TEXT: {
                        setState(48);
                        ((PriorityContext) _localctx).TEXT = match(TEXT);

                        ((PriorityContext) _localctx).priorityString = ((PriorityContext) _localctx).TEXT.getText();

                    }
                    break;
                    case NUMBER:
                    case MINUS: {
                        setState(51);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == MINUS) {
                            {
                                setState(50);
                                ((PriorityContext) _localctx).MINUS = match(MINUS);
                            }
                        }

                        setState(53);
                        ((PriorityContext) _localctx).NUMBER = match(NUMBER);

                        int negative = (((PriorityContext) _localctx).MINUS == null) ? 1 : -1;
                        ((PriorityContext) _localctx).priorityNum = negative * Integer.parseInt(((PriorityContext) _localctx).NUMBER.getText());

                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CategoryContext extends ParserRuleContext {
        public String cat;
        public Token TEXT;

        public TerminalNode CATEGORY() {
            return getToken(UIEntryGramParser.CATEGORY, 0);
        }

        public TerminalNode TEXT() {
            return getToken(UIEntryGramParser.TEXT, 0);
        }

        public CategoryContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_category;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).enterCategory(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).exitCategory(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UIEntryGramVisitor)
                return ((UIEntryGramVisitor<? extends T>) visitor).visitCategory(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CategoryContext category() throws RecognitionException {
        CategoryContext _localctx = new CategoryContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_category);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(57);
                match(CATEGORY);
                setState(58);
                ((CategoryContext) _localctx).TEXT = match(TEXT);

                ((CategoryContext) _localctx).cat = ((CategoryContext) _localctx).TEXT.getText();

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class FlagsContext extends ParserRuleContext {
        public String flagString;
        public Token TEXT;

        public TerminalNode FLAGS() {
            return getToken(UIEntryGramParser.FLAGS, 0);
        }

        public TerminalNode TEXT() {
            return getToken(UIEntryGramParser.TEXT, 0);
        }

        public FlagsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_flags;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).enterFlags(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).exitFlags(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UIEntryGramVisitor)
                return ((UIEntryGramVisitor<? extends T>) visitor).visitFlags(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FlagsContext flags() throws RecognitionException {
        FlagsContext _localctx = new FlagsContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_flags);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(61);
                match(FLAGS);
                setState(62);
                ((FlagsContext) _localctx).TEXT = match(TEXT);

                ((FlagsContext) _localctx).flagString = ((FlagsContext) _localctx).TEXT.getText();

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DescContext extends ParserRuleContext {
        public String description;
        public Token TEXT;

        public TerminalNode DESC() {
            return getToken(UIEntryGramParser.DESC, 0);
        }

        public TerminalNode TEXT() {
            return getToken(UIEntryGramParser.TEXT, 0);
        }

        public DescContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_desc;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).enterDesc(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).exitDesc(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UIEntryGramVisitor)
                return ((UIEntryGramVisitor<? extends T>) visitor).visitDesc(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DescContext desc() throws RecognitionException {
        DescContext _localctx = new DescContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_desc);

        ((DescContext) _localctx).description = "";

        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(65);
                match(DESC);
                setState(66);
                ((DescContext) _localctx).TEXT = match(TEXT);

                ((DescContext) _localctx).description = _localctx.description + ((DescContext) _localctx).TEXT.getText();

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class LabelContext extends ParserRuleContext {
        public String labelText;
        public Token TEXT;

        public TerminalNode LABEL() {
            return getToken(UIEntryGramParser.LABEL, 0);
        }

        public TerminalNode TEXT() {
            return getToken(UIEntryGramParser.TEXT, 0);
        }

        public LabelContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_label;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).enterLabel(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).exitLabel(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UIEntryGramVisitor)
                return ((UIEntryGramVisitor<? extends T>) visitor).visitLabel(this);
            else return visitor.visitChildren(this);
        }
    }

    public final LabelContext label() throws RecognitionException {
        LabelContext _localctx = new LabelContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_label);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(69);
                match(LABEL);
                setState(70);
                ((LabelContext) _localctx).TEXT = match(TEXT);

                ((LabelContext) _localctx).labelText = ((LabelContext) _localctx).TEXT.getText();

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Label2Context extends ParserRuleContext {
        public String label2Text;
        public Token TEXT;

        public TerminalNode LABEL2() {
            return getToken(UIEntryGramParser.LABEL2, 0);
        }

        public TerminalNode TEXT() {
            return getToken(UIEntryGramParser.TEXT, 0);
        }

        public Label2Context(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_label2;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).enterLabel2(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).exitLabel2(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UIEntryGramVisitor)
                return ((UIEntryGramVisitor<? extends T>) visitor).visitLabel2(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Label2Context label2() throws RecognitionException {
        Label2Context _localctx = new Label2Context(_ctx, getState());
        enterRule(_localctx, 18, RULE_label2);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(73);
                match(LABEL2);
                setState(74);
                ((Label2Context) _localctx).TEXT = match(TEXT);

                ((Label2Context) _localctx).label2Text = ((Label2Context) _localctx).TEXT.getText();

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Label5Context extends ParserRuleContext {
        public String label5Text;
        public Token TEXT;

        public TerminalNode LABEL5() {
            return getToken(UIEntryGramParser.LABEL5, 0);
        }

        public TerminalNode TEXT() {
            return getToken(UIEntryGramParser.TEXT, 0);
        }

        public Label5Context(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_label5;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).enterLabel5(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).exitLabel5(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UIEntryGramVisitor)
                return ((UIEntryGramVisitor<? extends T>) visitor).visitLabel5(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Label5Context label5() throws RecognitionException {
        Label5Context _localctx = new Label5Context(_ctx, getState());
        enterRule(_localctx, 20, RULE_label5);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(77);
                match(LABEL5);
                setState(78);
                ((Label5Context) _localctx).TEXT = match(TEXT);

                ((Label5Context) _localctx).label5Text = ((Label5Context) _localctx).TEXT.getText();

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class TemplateContext extends ParserRuleContext {
        public String templateText;
        public Token TEXT;

        public TerminalNode TEMPLATE() {
            return getToken(UIEntryGramParser.TEMPLATE, 0);
        }

        public TerminalNode TEXT() {
            return getToken(UIEntryGramParser.TEXT, 0);
        }

        public TemplateContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_template;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).enterTemplate(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UIEntryGramListener) ((UIEntryGramListener) listener).exitTemplate(this);
        }
